# NM_Lab1

./: Functions.h  Header.h  README.md  class.h  output.txt  pyproject.toml  ux1.txt  ux2.txt
Task2/: Task2.sln
Task2/Execution/: ux1  ux2
Task2/Task2/: Task2.vcxproj  Task2.vcxproj.filters
Task2/include/: Class.h  Functions.h  Header.h
Task2/source/: Source.cpp
lab1/: Q1_1.cpp  Q1_2.cpp  Q_test.cpp  Q_test.py  main.py  q_1.py
tests/: test_lab1.py
