[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
scipy = "^1.11.2"
PySimpleGUI = "^4.60.5"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
